2012-09-19  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* lib/graphlib.h (clone_attributes): Prototype changed.
	(clone_attributes_kind): Created.
	(label_extend_graph): Created.
	* lib/graphtools.h:
	* README: Updated for new installation instructions.
	* tools/connect.c (main): Use new clone_attributes and
	label_extend_graph functions.
	* tools/subgraph.c (main): Use new clone_attributes and
	label_extend_graph functions.

2012-09-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* configure: Regenerated.
	* configure.ac: Corrected package name.
	* tools/connect.c: New file.
	* tools/Makefile.am: Added connect as new program.
	* tools/Makefile.in: Regenerated.
	* tools/subgraph.c: Corrected commenting.

2012-09-18  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Extended files to ignore for autotools.
	* AUTHORS, ChangeLog, compile, config.guess, config.sub: Created.
	* configure: Generated from configure.ac
	* configure.ac, COPYING, depcomp: Created.
	* doc: Directory for documentation created.
	* doc/Makefile.am: Created.
	* doc/Makefile.in: Generated from doc/Makefile.am
	* INSTALL, install.sh: Created.
	* lib: Directory for library code created.
	* lib/graphlib.c: Moved from main directory.
	* lib/graphtools.h: Moved from main directory, add_edge renamed as
	clone_edge.
	* lib/Makefile.am: Created.
	* lib/Makefile.in: Generated from lib/Makefile.am
	* ltmain.sh: Created.
	* m4: Directory for m4 macros created.
	* m4/libtool.m4, m4/ltoptions.m4, m4/ltsugar.m4, m4/ltversion.m4,
	* m4/lt~obsolete.m4, Makefile.am: Created.
	* Makefile.in: Generated from Makefile.am
	* missing, NEWS, README.md: Created.
	* README: Created as soft link to README.md.
	* testsuite: Directory for test suite created.
	* testsuite/Makefile.am: Created.
	* testsuite/Makefile.in: Generated from testsuite/Makefile.am
	* tools: Directory for tools code created.
	* tools/Makefile.am: Created.
	* tools/Makefile.in: Generated from tools/Makefile.am